server: upd: input-queue module

--- a/veda.properties
+++ b/veda.properties
@@ -1,4 +1,5 @@
 node_id = cfg:standart_node
+
 notify_channel_url = tcp://127.0.0.1:9111
 main_module_url = tcp://127.0.0.1:9112
 http_port=8080
@@ -9,5 +10,10 @@ ft_query_service_url=127.0.0.1:23000
 go_http_port=8080
 binobj_format=msgpack
 #binobj_format=cbor
-input_queue_path=input/queue
+
+#master config
 modules=veda-ft-indexer,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ft-query,veda-ltr-scripts,veda-scripts-lp,veda-scripts-main,veda-ccus,veda-webserver,veda-ttlreader
+
+#slave config
+#modules=veda-ft-indexer,veda-ttlreader,veda-input-queue
+input_queue_path=data/input/queue
