--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,8 @@ addons:
 
 # Build
 install:
-  - ./control-install.sh&>install.log 
+  - ./control-install.sh
+#&>install.log 
   - source $HOME/.cargo/env
   - dub -v fetch vibe-d --version=0.7.30
 #  - npm install --save-dev testcafe-browser-provider-saucelabs
