(UPD) server: switch to msgpack & tarantool

--- a/veda.properties
+++ b/veda.properties
@@ -16,7 +16,7 @@ binobj_format=msgpack
 #master config (lmdb)
 #modules=veda-lmdb-srv,veda-ft-indexer,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ft-query,veda-ltr-scripts,veda-scripts-lp,veda-scripts-main,veda-ccus,veda-webserver,veda-ttlreader
 
-master config (tarantool)
+#master config (tarantool)
 modules=veda-ft-indexer,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ft-query,veda-ltr-scripts,veda-scripts-lp,veda-scripts-main,veda-ccus,veda-webserver,veda-ttlreader
 
 #slave config
