--- a/veda.properties
+++ b/veda.properties
@@ -17,7 +17,7 @@ binobj_format=msgpack
 #modules=veda-lmdb-srv,veda-ft-indexer,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ft-query,veda-ltr-scripts,veda-scripts-lp,veda-scripts-main,veda-ccus,veda-webserver,veda-ttlreader
 
 #master config (tarantool)
-modules=veda-ft-indexer,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ft-query,veda-ltr-scripts,veda-scripts-lp,veda-scripts-main,veda-ccus,veda-webserver,veda-ttlreader
+modules=veda-ft-indexer,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ft-query,veda-ltr-scripts,veda-scripts-lp,veda-scripts-main,veda-ccus,veda-gowebserver,veda-ttlreader
 
 #slave config
 #modules=veda-ft-indexer,veda-ttlreader,veda-input-queue
