server: add lmdb-service, tmp switch to cbor & lmdb

--- a/veda.properties
+++ b/veda.properties
@@ -6,18 +6,18 @@ http_port=8080
 https_port=8020
 use_https=false
 
-tarantool_url=127.0.0.1:3309
+#tarantool_url=127.0.0.1:3309
 ft_query_service_url=tcp://127.0.0.1:23000
 lmdb_service_url=tcp://127.0.0.1:23001
 go_http_port=8080
-binobj_format=msgpack
-#binobj_format=cbor
+#binobj_format=msgpack
+binobj_format=cbor
 
 #master config (lmdb)
-#modules=veda-lmdb-srv,veda-ft-indexer,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ft-query,veda-ltr-scripts,veda-scripts-lp,veda-scripts-main,veda-ccus,veda-webserver,veda-ttlreader
+modules=veda-lmdb-srv,veda-ft-indexer,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ft-query,veda-ltr-scripts,veda-scripts-lp,veda-scripts-main,veda-ccus,veda-gowebserver,veda-ttlreader
 
 #master config (tarantool)
-modules=veda-ft-indexer,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ft-query,veda-ltr-scripts,veda-scripts-lp,veda-scripts-main,veda-ccus,veda-gowebserver,veda-ttlreader
+#modules=veda-ft-indexer,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ft-query,veda-ltr-scripts,veda-scripts-lp,veda-scripts-main,veda-ccus,veda-gowebserver,veda-ttlreader
 
 #slave config
 #modules=veda-ft-indexer,veda-ttlreader,veda-input-queue
