--- a/ontology/config.ttl.cfg
+++ b/ontology/config.ttl.cfg
@@ -59,6 +59,12 @@ cfg:WelcomeExternal
   rdfs:label "Welcome individual"@en ;
   rdf:value v-s:Welcome ;
 .
+cfg:SystemInfoExternal
+  rdf:type v-s:AppInfo;
+  rdfs:label "OptiflowExternal";
+  v-s:appUrl "http://optiflow.mondislpk.ru/#";
+  v-wf:appInboxUrl "http://optiflow.mondislpk.ru/#/v-ft:Inbox";
+.
 cfg:NTLMAuthProvider
   rdf:type rdfs:Resource ;
   rdfs:label "NTLM authentication provider" ;
