--- a/ontology/config.ttl.cfg
+++ b/ontology/config.ttl.cfg
@@ -207,5 +207,7 @@ cfg:conn_smtp1
   v-s:host "smtp_point" ;
   v-s:port "25"^^xsd:integer ;
   v-s:transport "smtp" ;
+  v-s:MailSender cfg:Administrator;
+  v-s:alwaysUseMailSender "false"^^xsd:boolean;
 .
 
