server: authenticate, now use (v-s:Node)cfg:user_password_lifetime, if 0 or not exist: password lifetime no limit.

--- a/ontology/config.ttl.cfg
+++ b/ontology/config.ttl.cfg
@@ -141,6 +141,7 @@ cfg:standart_node
   v-s:listener cfg:conn_http;
   rdfs:label "Стандартная конфигурация" ;
   cfg:low_priority_user cfg:ImportDMSToVeda ;
+  cfg:user_password_lifetime "0"^^xsd:integer;
 .
 
 cfg:test_node
