--- a/veda.properties
+++ b/veda.properties
@@ -15,7 +15,7 @@ go_http_port=8080
 binobj_format=cbor
 
 #master config (lmdb)
-modules=veda-lmdb-srv,veda-ft-indexer,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ft-query,veda-ltr-scripts,veda-scripts-lp,veda-scripts-main,veda-ccus,veda-gowebserver,veda-ttlreader
+modules=veda-lmdb-srv,veda-ft-indexer,veda-ft-query,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ltr-scripts,veda-scripts-lp,veda-scripts-main,veda-ccus,veda-gowebserver,veda-ttlreader
 
 #master config (tarantool)
 #modules=veda-ft-indexer,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ft-query,veda-ltr-scripts,veda-scripts-lp,veda-scripts-main,veda-ccus,veda-gowebserver,veda-ttlreader
