server: ccus, remove default port setting, now use param [ccus_port] from veda.properties)

--- a/veda.properties
+++ b/veda.properties
@@ -1,5 +1,6 @@
 node_id = cfg:standart_node
 
+ccus_port=8088 
 notify_channel_url = tcp://127.0.0.1:9111
 main_module_url = tcp://127.0.0.1:9112
 http_port=8080
