(upd)server: upd controll-install.sh, dependency: TARANTOOL_VER=1.10.2, NANOMSG_VER=1.1.5

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,8 @@ addons:
 
 # Build
 install:
-  - ./control-install.sh&>install.log 
+  - ./control-install.sh
+#&>install.log 
   - source $HOME/.cargo/env
 #  - npm install --save-dev testcafe-browser-provider-saucelabs
   - npm install --save-dev testcafe
