--- a/veda.properties
+++ b/veda.properties
@@ -1,25 +1,27 @@
 node_id = cfg:standart_node
 
+# webserver
 ccus_port=8088 
-notify_channel_url = tcp://127.0.0.1:9111
-main_module_url = tcp://127.0.0.1:9112
 http_port=8080
 https_port=8020
 use_https=false
 webserver_trace=false
 
+# modules
+notify_channel_url = tcp://127.0.0.1:9111
+main_module_url = tcp://127.0.0.1:9112
 #tarantool_url=127.0.0.1:3309
 ft_query_service_url=tcp://127.0.0.1:23000
 lmdb_service_url=tcp://127.0.0.1:24000
 #binobj_format=msgpack
 binobj_format=cbor
 
-#master config (lmdb)
+# master config (lmdb)
 modules=veda-lmdb-srv,veda-ft-indexer,veda-ft-query,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ltr-scripts,veda-scripts-lp,veda-scripts-main,veda-ccus,veda-gowebserver,veda-ttlreader
 
-#master config (tarantool)
+# master config (tarantool)
 #modules=veda-ft-indexer,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ft-query,veda-ltr-scripts,veda-scripts-lp,veda-scripts-main,veda-ccus,veda-gowebserver,veda-ttlreader
 
-#slave config
+# slave config
 #modules=veda-ft-indexer,veda-ttlreader,veda-input-queue
 #input_queue_path=data/input/queue
