fix(cfg): cfg:ClientVsn param introduced

--- a/ontology/config.ttl.cfg
+++ b/ontology/config.ttl.cfg
@@ -85,10 +85,17 @@ cfg:ClientSettings
   rdfs:label "Группа настроек клиента"@ru ;
   rdfs:label "Client settings group"@en ;
 .
+cfg:ClientVsn
+  rdf:type rdfs:Resource ;
+  rdfs:label "Версия клиента"@ru ;
+  rdfs:label "Client version"@en ;
+  rdf:value "2018-11-23T20:41";
+.
 cfg:ClientSettingsMembership
   rdf:type v-s:Membership ;
   v-s:memberOf cfg:ClientSettings ;
 #  v-s:resource cfg:ClientUpdateServiceAddress ;
+  v-s:resource cfg:ClientVsn ;
   v-s:resource cfg:OntoVsn ;
   v-s:resource cfg:jasperServerAddress ;
   v-s:resource cfg:Layout ;
@@ -105,14 +112,15 @@ cfg:ClientSettingsPermission1
   v-s:canRead "true"^^xsd:boolean ;
   v-s:permissionSubject cfg:AllUsersGroup ;
   v-s:permissionObject cfg:ClientSettings ;
-  rdfs:label "Запись о выдаче прав для настроек клиента, 2"@ru ;
-  rdfs:label "Client settings permission 2"@en ;
+  rdfs:label "Запись о выдаче прав для настроек клиента 1"@ru ;
+  rdfs:label "Client settings permission 1"@en ;
 .
 cfg:ClientSettingsPermission2
   rdf:type v-s:PermissionStatement ;
   v-s:canRead "true"^^xsd:boolean ;
   v-s:permissionObject cfg:NTLMAuthProvider ;
   v-s:permissionObject cfg:OntoVsn ;
+  v-s:permissionObject cfg:ClientVsn ;
   v-s:permissionObject cfg:OntologyGroup ;
   v-s:permissionObject v-ui:AvailableLanguage ;
   v-s:permissionObject v-ui:DefaultLanguage ;
@@ -128,7 +136,7 @@ cfg:ClientSettingsPermission3
   v-s:canCreate "true"^^xsd:boolean ;
   v-s:permissionObject v-s:RegistrationRequest ;
   v-s:permissionSubject cfg:Guest ;
-  rdfs:label "Запись о выдаче прав для настроек клиента, 3"@ru ;
+  rdfs:label "Запись о выдаче прав для настроек клиента 3"@ru ;
   rdfs:label "Client settings permission 3"@en ;
 .
 
