feat(test): add new test testSearch

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ script:
   - travis_wait 20 grunt test --stack --verbose
   - testcafe chromium qa/testcafe/testLogin.js
   - testcafe chromium qa/testcafe/testLanguage.js
+  - testcafe chromium qa/testcafe/testSearch.js
   - testcafe chromium qa/testcafe/testAttributiveSearch.js
   - testcafe chromium qa/testcafe/testComment.js
   - testcafe chromium qa/testcafe/testCreatingNetInterface.js
