feat(core): scripts, add low_priority_1 queue

--- a/veda.properties
+++ b/veda.properties
@@ -18,10 +18,10 @@ lmdb_service_url     = tcp://127.0.0.1:24000
 binobj_format  = cbor
 
 # master config (lmdb)
-modules=veda-lmdb-srv,veda-ft-indexer,veda-ft-query,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ltr-scripts,veda-scripts-lp,veda-scripts-main,veda-ccus,veda-gowebserver,veda-ttlreader
+modules=veda-lmdb-srv,veda-ft-indexer,veda-ft-query,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ltr-scripts,veda-scripts-lp,veda-scripts-lp1,veda-scripts-main,veda-ccus,veda-gowebserver,veda-ttlreader
 
 # master config (tarantool)
-#modules=veda-ft-indexer,veda-ft-query,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ltr-scripts,veda-scripts-lp,veda-scripts-main,veda-ccus,veda-gowebserver,veda-ttlreader
+#modules=veda-ft-indexer,veda-ft-query,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ltr-scripts,veda-scripts-lp,veda-scripts-lp1,veda-scripts-main,veda-ccus,veda-gowebserver,veda-ttlreader
 
 # slave config
 #modules=veda-ft-indexer,veda-ttlreader,veda-input-queue
