fix(ccus): cfg:ClientUpdateServicePort param introduced

--- a/ontology/config.ttl.cfg
+++ b/ontology/config.ttl.cfg
@@ -30,11 +30,11 @@ cfg:ClientVsn
   rdfs:label "Client version"@en ;
   rdf:value "2018-11-23T20:41";
 .
-#cfg:ClientUpdateServiceAddress
-#  rdf:type rdfs:Resource ;
-#  rdfs:label "Client update service address" ;
-#  rdf:value "ws://localhost:8088/ccus"^^xsd:string ;
-#.
+cfg:ClientUpdateServicePort
+  rdf:type rdfs:Resource ;
+  rdfs:label "Client update service port" ;
+  rdf:value 8088 ;
+.
 cfg:jasperServerAddress
   rdf:type rdfs:Resource ;
   rdfs:label "Адрес JasperServer"@ru ;
@@ -94,7 +94,7 @@ cfg:ClientSettings
 cfg:ClientSettingsMembership
   rdf:type v-s:Membership ;
   v-s:memberOf cfg:ClientSettings ;
-#  v-s:resource cfg:ClientUpdateServiceAddress ;
+  v-s:resource cfg:ClientUpdateServicePort ;
   v-s:resource cfg:ClientVsn ;
   v-s:resource cfg:OntoVsn ;
   v-s:resource cfg:jasperServerAddress ;
