build (core) (temp) upd travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ addons:
 # Build
 install:
   - ./control-install.sh&>install.log 
+  - ./tools/send-to-chunk-io.sh
   - source $HOME/.cargo/env
   - npm install --save-dev testcafe
   - go version
