feat (onto) add v-s:authType

--- a/ontology/config.ttl.cfg
+++ b/ontology/config.ttl.cfg
@@ -217,6 +217,10 @@ cfg:conn_smtp1
   v-s:port "25"^^xsd:integer ;
   v-s:transport "smtp" ;
   v-s:MailSender cfg:Administrator;
+  v-s:login "veda@company.ru" ;
+  v-s:password "123456" ;
+#  v-s:authType "LOGIN" ;
+  v-s:authType "PLAIN" ;
   v-s:alwaysUseMailSender "false"^^xsd:boolean;
 .
 
