feat(test): add new test testSimpleNetLowPriority

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,7 @@ script:
   - testcafe chromium qa/testcafe/testSimpleNet.js
   - testcafe chromium qa/testcafe/testSimpleNet2.js  
   - testcafe chromium qa/testcafe/testSimpleNet3.js
+  - testcafe chromium qa/testcafe/testSimpleNetLowPriority.js
   - testcafe chromium qa/testcafe/testControls.js  
 
 after_script:
