feat(news): client notification

--- a/ontology/config.ttl.cfg
+++ b/ontology/config.ttl.cfg
@@ -24,11 +24,10 @@ v-s:vedaInfo
 
 ##################### CLIENT ######################
 
-cfg:ClientVsn
-  rdf:type rdfs:Resource ;
-  rdfs:label "Версия клиента"@ru ;
-  rdfs:label "Client version"@en ;
-  rdf:value "2018-11-23T20:41";
+cfg:ClientNotification
+  rdf:type v-s:Thing ;
+  rdfs:label "Уведомление клиента"@ru ;
+  rdfs:label "Client notification"@en ;
 .
 cfg:ClientUpdateServicePort
   rdf:type rdfs:Resource ;
@@ -95,7 +94,7 @@ cfg:ClientSettingsMembership
   rdf:type v-s:Membership ;
   v-s:memberOf cfg:ClientSettings ;
   v-s:resource cfg:ClientUpdateServicePort ;
-  v-s:resource cfg:ClientVsn ;
+  v-s:resource cfg:ClientNotification ;
   v-s:resource cfg:OntoVsn ;
   v-s:resource cfg:jasperServerAddress ;
   v-s:resource cfg:Layout ;
@@ -120,7 +119,7 @@ cfg:ClientSettingsPermission2
   v-s:canRead "true"^^xsd:boolean ;
   v-s:permissionObject cfg:NTLMAuthProvider ;
   v-s:permissionObject cfg:OntoVsn ;
-  v-s:permissionObject cfg:ClientVsn ;
+  v-s:permissionObject cfg:ClientNotification ;
   v-s:permissionObject cfg:OntologyGroup ;
   v-s:permissionObject v-ui:AvailableLanguage ;
   v-s:permissionObject v-ui:DefaultLanguage ;
