fix(config.ttl.cfg)

--- a/ontology/config.ttl.cfg
+++ b/ontology/config.ttl.cfg
@@ -117,9 +117,10 @@ cfg:ClientSettingsPermission1
 cfg:ClientSettingsPermission2
   rdf:type v-s:PermissionStatement ;
   v-s:canRead "true"^^xsd:boolean ;
+  v-s:permissionObject cfg:ClientUpdateServicePort ;
+  v-s:permissionObject cfg:ClientNotification ;
   v-s:permissionObject cfg:NTLMAuthProvider ;
   v-s:permissionObject cfg:OntoVsn ;
-  v-s:permissionObject cfg:ClientNotification ;
   v-s:permissionObject cfg:OntologyGroup ;
   v-s:permissionObject v-ui:AvailableLanguage ;
   v-s:permissionObject v-ui:DefaultLanguage ;
