--- a/veda.properties
+++ b/veda.properties
@@ -13,14 +13,14 @@ main_module_url      = tcp://127.0.0.1:9112
 ft_query_service_url = tcp://127.0.0.1:23000
 
 # master config (lmdb)
-binobj_format  = cbor
-lmdb_service_url     = tcp://127.0.0.1:24000
-modules=veda-lmdb-srv,veda-ft-indexer,veda-ft-query,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ltr-scripts,veda-scripts-lp,veda-scripts-lp1,veda-scripts-main,veda-ccus,veda-gowebserver,veda-ttlreader
+#binobj_format  = cbor
+#lmdb_service_url     = tcp://127.0.0.1:24000
+#modules=veda-lmdb-srv,veda-ft-indexer,veda-ft-query,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ltr-scripts,veda-scripts-lp,veda-scripts-lp1,veda-scripts-main,veda-ccus,veda-gowebserver,veda-ttlreader
 
 # master config (tarantool)
-#binobj_format = msgpack
-#tarantool_url       = 127.0.0.1:3309
-#modules=veda-ft-indexer,veda-ft-query,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ltr-scripts,veda-scripts-lp,veda-scripts-lp1,veda-scripts-main,veda-ccus,veda-gowebserver,veda-ttlreader
+binobj_format = msgpack
+tarantool_url       = 127.0.0.1:3309
+modules=veda-ft-indexer,veda-ft-query,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ltr-scripts,veda-scripts-lp,veda-scripts-lp1,veda-scripts-main,veda-ccus,veda-gowebserver,veda-ttlreader
 
 # slave config
 #modules=veda-ft-indexer,veda-ttlreader,veda-input-queue
