feat(core) input-queue: add [argets_for_input_flow] param to veda.properties

--- a/veda.properties
+++ b/veda.properties
@@ -25,9 +25,10 @@ ft_query_service_url = tcp://127.0.0.1:23000
 # TARANTOOL
 # master config
 binobj_format = msgpack
-tarantool_url       = 127.0.0.1:3309
+tarantool_url = 127.0.0.1:3309
 modules=veda-ft-indexer,veda-ft-query,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ltr-scripts,veda-scripts-lp,veda-scripts-lp1,veda-scripts-main,veda-ccus,veda-gowebserver,veda-ttlreader
 
 # slave config
 #modules=veda-ft-query,veda-input-queue,veda-gowebserver
 #input_queue_path=data/input/queue
+#targets_for_input_flow=STORAGE,ACL,FULL_TEXT_INDEXER,FANOUT_SQL,FANOUT_EMAIL,SCRIPTS,USER_MODULES_TOOL
