--- a/.travis.yml
+++ b/.travis.yml
@@ -55,7 +55,7 @@ script:
   - testcafe chromium qa/testcafe/testSimpleNet3.js
   - testcafe chromium qa/testcafe/testSimpleNetLowPriority.js
   - testcafe chromium qa/testcafe/testControls.js
-  - testcafe chromium qa/testcafe/testDrafts.js
+#  - testcafe chromium qa/testcafe/testDrafts.js
   - testcafe chromium qa/testcafe/testDropDown.js
 
 after_script:
