--- a/ontology/config.ttl.cfg
+++ b/ontology/config.ttl.cfg
@@ -146,6 +146,14 @@ cfg:ClientSettingsPermission3
   rdfs:label "Запись о выдаче прав для настроек клиента 3"@ru ;
   rdfs:label "Client settings permission 3"@en ;
 .
+cfg:ClientSettingsPermission4
+  rdf:type v-s:PermissionStatement ;
+  v-s:canRead "true"^^xsd:boolean ;
+  v-s:permissionObject cfg:TTLResourcesGroup ;
+  v-s:permissionSubject cfg:Guest ;
+  rdfs:label "Запись о выдаче прав для настроек клиента 4"@ru ;
+  rdfs:label "Client settings permission 4"@en ;
+.
 
 ##################### SERVER ######################
 
