fix(qa): attempt fix: The command "sudo -E apt-get -yq --no-install-suggests --no-install-recommends $(travis_apt_get_options) install google-chrome-stable fluxbox" failed and exited with 100 during

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,14 @@ before_install:
   - npm install -g grunt-cli
   - npm install grunt-contrib-qunit --save-dev
   - npm install grunt --save-dev
+  - sudo -E apt-get -yq --allow-unauthenticated --no-install-suggests --no-install-recommends $(travis_apt_get_options) install google-chrome-stable fluxbox
 
-addons:
-  apt:
-    sources:
-     - google-chrome
-    packages:
-     - google-chrome-stable fluxbox
+#addons:
+#  apt:
+#    sources:
+#     - google-chrome
+#    packages:
+#     - google-chrome-stable fluxbox
 
 # Build
 install:
