feat(core): rename module lmdb-service to ro-storage

--- a/veda.properties
+++ b/veda.properties
@@ -14,12 +14,12 @@ ft_query_service_url = tcp://127.0.0.1:23000
 
 # LMDB master config
 #binobj_format  = cbor
-#lmdb_service_url     = tcp://127.0.0.1:24000
-#modules=veda-lmdb-srv,veda-ft-indexer,veda-ft-query,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ltr-scripts,veda-scripts-lp,veda-scripts-lp1,veda-scripts-main,veda-ccus,veda-gowebserver,veda-ttlreader
+#ro_storage_url = tcp://127.0.0.1:24000
+#modules=veda-ro-storage,veda-ft-indexer,veda-ft-query,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ltr-scripts,veda-scripts-lp,veda-scripts-lp1,veda-scripts-main,veda-ccus,veda-gowebserver,veda-ttlreader
 
 # LMDB slave config
 #binobj_format  = cbor
-#modules=veda-lmdb-srv,veda-ft-query,veda-input-queue,veda-gowebserver
+#modules=veda-ro-storage,veda-ft-query,veda-input-queue,veda-gowebserver
 #input_queue_path=data/input/queue
 
 # TARANTOOL master config
