--- a/source/veda-ccus/Cargo.toml
+++ b/source/veda-ccus/Cargo.toml
@@ -12,19 +12,9 @@ path = "src/main.rs"
 actix = "0.8.1"
 actix-web = "1.0.0-alpha.4"
 actix-web-actors = "1.0.0-alpha.3"
-actix-files = "0.1.0-alpha.4"
 env_logger = "0.6"
-futures = "0.1"
-bytes = "0.4"
-human-panic = "1.0.1"
-rmp = "^0.8"
-rmp-serde = "0.13.7"
-rmp-serialize = "0.8.0"
-serde = "1.0"
-owning_ref = "0.3"
 scan_fmt = "0.1.3"
-crc32fast = "1.1.2"
 log = "0.4"
-simple_logger = "0.5.0"
+rust-ini = "0.13"
 v_queue = { path = "../v-queue" }
 v_onto = { path = "../v-onto" }
