--- a/ontology/config.ttl.cfg
+++ b/ontology/config.ttl.cfg
@@ -53,27 +53,27 @@ cfg:jasperServerAddress
 .
 cfg:Layout
   rdf:type rdfs:Resource ;
-  rdfs:label "Индивид главной страницы приложения"@ru ;
-  rdfs:label "Main page individual"@en ;
-  rdf:value v-s:Main ;
+  rdfs:label "Макет"@ru ;
+  rdfs:label "Layout"@en ;
+  rdf:value v-s:Layout ;
 .
-cfg:Welcome
+cfg:Main
   rdf:type rdfs:Resource ;
-  rdfs:label "Индивид приветствия"@ru ;
-  rdfs:label "Welcome individual"@en ;
-  rdf:value v-s:Welcome ;
+  rdfs:label "Главная"@ru ;
+  rdfs:label "Main"@en ;
+  rdf:value v-s:Main ;
 .
 cfg:LayoutExternal
   rdf:type rdfs:Resource ;
-  rdfs:label "Индивид главной страницы приложения"@ru ;
-  rdfs:label "Main page individual"@en ;
-  rdf:value v-s:Main ;
+  rdfs:label "Макет внешний"@ru ;
+  rdfs:label "Layout external"@en ;
+  rdf:value v-s:Layout ;
 .
-cfg:WelcomeExternal
+cfg:MainExternal
   rdf:type rdfs:Resource ;
-  rdfs:label "Индивид приветствия"@ru ;
-  rdfs:label "Welcome individual"@en ;
-  rdf:value v-s:Welcome ;
+  rdfs:label "Главная внешняя"@ru ;
+  rdfs:label "Main external"@en ;
+  rdf:value v-s:Main ;
 .
 cfg:SystemInfoExternal
   rdf:type v-s:AppInfo;
@@ -105,9 +105,9 @@ cfg:ClientSettingsMembership
   v-s:resource cfg:OntoVsn ;
   v-s:resource cfg:jasperServerAddress ;
   v-s:resource cfg:Layout ;
-  v-s:resource cfg:Welcome ;
+  v-s:resource cfg:Main ;
   v-s:resource cfg:LayoutExternal ;
-  v-s:resource cfg:WelcomeExternal ;
+  v-s:resource cfg:MainExternal ;
   v-s:resource cfg:JournalDMS ;
   rdfs:label "Принадлежность группе настроек клиента"@ru ;
   rdfs:label "Client settings membership"@en ;
