--- a/source/veda-ccus/Cargo.toml
+++ b/source/veda-ccus/Cargo.toml
@@ -16,5 +16,6 @@ env_logger = "0.6"
 scan_fmt = "0.1.3"
 log = "0.4"
 rust-ini = "0.13"
+nng = "0.4.0"
 v_queue = { path = "../v-queue" }
 v_onto = { path = "../v-onto" }
