--- a/veda.properties
+++ b/veda.properties
@@ -11,6 +11,7 @@ webserver_trace = false
 notify_channel_url   = tcp://127.0.0.1:9111
 main_module_url      = tcp://127.0.0.1:9112
 ft_query_service_url = tcp://127.0.0.1:23000
+ro_storage_url 	     = tcp://127.0.0.1:24000
 
 # LMDB master config
 #binobj_format  = cbor
@@ -25,7 +26,7 @@ ft_query_service_url = tcp://127.0.0.1:23000
 # TARANTOOL master config
 binobj_format = msgpack
 tarantool_url = 127.0.0.1:3309
-modules=veda-ft-indexer,veda-ft-query,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ltr-scripts,veda-scripts-lp,veda-scripts-lp1,veda-scripts-main,veda-ccus,veda-gowebserver,veda-ttlreader
+modules=veda-ro-storage,veda-ft-indexer,veda-ft-query,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ltr-scripts,veda-scripts-lp,veda-scripts-lp1,veda-scripts-main,veda-ccus,veda-gowebserver,veda-ttlreader
 
 # TARANTOOL slave config
 #binobj_format = msgpack
